# ticketing

./: README.md  pyproject.toml  runserver.py  scripts.py
ticketing/event/: models.py
ticketing/ticketing/: asgi.py  settings.py  urls.py  wsgi.py
