[tool.poetry]
name = "Ticketing"
version = "0.1.0"
description = "Ticketing website for private events."
authors = ["Joshua Wharton <joshuawharton1997@gmail.com>", "Gabrielle FitzSimons <gfitzsimons81@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"

[tool.poetry.scripts]
server = "scripts:server"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
